# symbolicate

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deno.jsonc
crates/deno_stable_stacktrace/: Cargo.toml
crates/deno_stable_stacktrace/src/: encode.rs  lib.rs
crates/deno_stacktrace_encoding_wasm/: Cargo.toml
crates/deno_stacktrace_encoding_wasm/src/: lib.rs
crates/deno_symbolicate/: Cargo.toml
crates/deno_symbolicate/src/: lib.rs
crates/deno_symbolicate_wasm/: Cargo.toml
crates/deno_symbolicate_wasm/src/: lib.rs
js/client-side/: deno.jsonc  index.html  tailwind.config.js  vite.config.ts
js/client-side/src/: app.tsx  index.css  index.tsx  stacktrace.ts  storage.ts
js/symbolicate/: decode.ts  deno.jsonc  deno.ts  mod.ts  stacktrace.ts
js/symbolicate/tests/: decode_test.ts
server/: main.ts
