[package]
name = "deno_stacktrace_encoding_wasm"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
deno_stable_stacktrace = { path = "../deno_stable_stacktrace", default-features = false, features = [
  "encode",
  "serde",
] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
] }
